[package]
name = "rusty-physics"
version = "0.1.0"
edition = "2024"

# Enabling a small amount of optimization in the dev profile
[profile.dev]
opt-level = 1

# Enabling a large amount of optimization in the dev profile for dependencies
[profile.dev.package."*"]
opt-level = 3

[dependencies]
avian3d = "0.4.1"
bevy = { version = "^0.17", features = ["bevy_dev_tools"] }
bevy_asset = "^0.17"
bevy_egui = "^0.38"
bevy_framepace = "0.20.0"
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
